tdf#165595 speedup drawinglayer processing skia images

Not really sure why this code is needed here, seems like we could
just put it into the SalBitmap base class,
there is no actual logic being added.

Change-Id: I2103ab392625c1e13e177ebbb753e111639f06a4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184524
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
(cherry picked from commit 48c7b7c06b918702eab88b58f05c09a3a4f19928)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184565
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>