vcl/inc/skia/salbmp.hxx
@@ -28,7 +28,8 @@
 
 #include <SkImage.h>
 
-class VCL_PLUGIN_PUBLIC SkiaSalBitmap final : public SalBitmap
+class VCL_PLUGIN_PUBLIC SkiaSalBitmap final : public SalBitmap,
+                                              public basegfx::SystemDependentDataHolder
 {
 public:
     SkiaSalBitmap();
@@ -64,6 +65,9 @@ public:
     virtual bool Erase(const Color& color) override;
     virtual bool AlphaBlendWith(const SalBitmap& rSalBmp) override;
     virtual bool Invert() override;
+    SAL_DLLPRIVATE virtual const basegfx::SystemDependentDataHolder*
+    accessSystemDependentDataHolder() const override;
+
 #if defined MACOSX || defined IOS
     virtual CGImageRef CreateWithMask(const SalBitmap& rMask, int nX, int nY, int nWidth,
                                       int nHeight) const override;
